# layrz_icons

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING  LICENSE  Makefile  README.md  analysis_options.yaml  go.mod  mapper.example.py  pubspec.yaml  pyproject.toml
.claude/: settings.local.json
.github/actions/changelog/: action.yaml
.github/actions/coverage-comment/: action.yaml
.github/workflows/: checks.yaml  publish.yaml  publish.yml
cmd/: main.go
example/: README.md  analysis_options.yaml  pubspec.yaml
example/lib/: export_dialog.dart  icons.dart  layout.dart  main.dart  not_found.dart  router.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
example/web/: index.html
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
generator/: class_enum_generator.py  font_awesome_flutter.py  icon_enum_generator.py  iconsax.py  ionicons.py  mapping_generator.py  material_design_icons_flutter.py  solar_icons.py  utils.py
internal/tools/: generators.go  pubspec.go  scanners.go  utils.go
lib/: layrz_icons.dart
lib/src/: class_enum.dart  icon_enum.dart  mapping.dart
